finished contact and shop pages

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,194 @@
-.App {
-  text-align: center;
+html,
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Montserrat', sans-serif;
+    color: #0c0b0b;
+    overflow-x: hidden;
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.banner {
+    background-color: #d4bc64;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.banner p {
+    font-size: 12px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.header-wrapper {
+    padding: 18px 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.icon {
+    width: 20px;
+    height: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#nav1 a,
+#nav2 a {
+    color: #191919;
+    font-size: 12px;
+    font-weight: 500;
+    letter-spacing: 0.2em;
+}
+
+#nav1 a {
+    border-bottom: 1px solid #dbdbda;
+}
+
+#sidebar-menu a {
+    font-size: 11px;
+    font-weight: normal;
+    color: rgb(0, 0, 0, 0.5);
+    border: none;
+}
+
+#sidebar-menu a:hover {
+    color: #000;
+}
+
+.currency {
+    border: none;
+    font-size: 12px;
+    color: #000;
+    letter-spacing: 0.2em;
+    width: 100px;
+    font-weight: 500;
+}
+
+footer {
+    padding-left: 30px;
+    padding-right: 30px;
+    border-top: 1px solid #dbdada;
+}
+
+footer .currency {
+    color: #5b5a5a;
+}
+
+#nav2 a:hover {
+    border-bottom: 1px solid #191919;
+}
+
+#social-offcanvas a,
+#footer-socials a {
+    color: #7f7f7f;
+}
+
+#social-offcanvas {
+    border-top: 1px solid #bfbfbf;
+    width: inherit;
+}
+
+#social-offcanvas a svg,
+#footer-socials a svg {
+    width: 12px;
+    height: 12px;
+}
+
+footer h3 {
+    color: #5c5c5c;
+    font-size: 11px;
+    letter-spacing: 0.2em;
+    font-weight: 500;
+}
+
+footer p,
+.subscribe::placeholder,
+.message::placeholder {
+    font-size: 11px;
+    color: #5b5a5a;
+}
+
+.copyright {
+    color: #5c5c5c;
+    letter-spacing: 0.2em;
+    font-weight: 500;
+    font-size: 10px;
+}
+
+.subscribe-btn,
+.message-btn {
+    background-color: #d4bc64;
+    border-color: #d4bc64;
+    font-size: 10px;
+    letter-spacing: 0.2em;
+    font-weight: 500;
+}
+
+.subscribe-btn:hover,
+.message-btn:hover {
+    background-color: #7a4e29;
+    border-color: #7a4e29;
+}
+
+#contact-us,
+#shop {
+    padding: 25px;
+    /* margin-top: 250px; */
+}
+
+#contact-us h1,
+#shop h1,
+.shop-title,
+.shop-text,
+.open-days h2,
+.open-days p,
+.contact span {
+    font-weight: 500;
+    font-size: 20px;
+    letter-spacing: 0.2em;
+    color: #5c5c5c;
+}
+
+.open-days h2 {
+    font-size: 15px;
+    color: #191919;
+}
+
+.open-days p,
+.shop-title,
+.shop-text,
+.contact span {
+    font-size: 11px;
+}
+
+.contact span a {
+    color: #5c5c5c;
+}
+
+.shop-img {
+    object-fit: cover;
+}
+
+.shop-text {
+    /* font-size: 10px; */
+    color: #414141;
+}
+
+/* .shop-overlay {
+    color: transparent;
+}
+
+.shop-overlay:hover {
+    color: #000;
+} */
+
+@media only screen and (max-width: 768px) {
+    /* #contact-us {
+        margin-top: 200px;
+    } */
+}
+
+@media only screen and (max-width: 576px) {
+    .header-wrapper,
+    footer {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    /* #contact-us {
+        margin-top: 150px;
+    } */
 }
