--- a/src/App.css
+++ b/src/App.css
@@ -108,8 +108,10 @@ footer p,
     font-size: 10px;
 }
 
-.subscribe-btn,
-.message-btn {
+.subscribe-btn:hover,
+.carousel .btn,
+.message-btn,
+.collection .btn {
     background-color: #d4bc64;
     border-color: #d4bc64;
     font-size: 10px;
@@ -117,10 +119,15 @@ footer p,
     font-weight: 500;
 }
 
-.subscribe-btn:hover,
-.message-btn:hover {
+.subscribe-btn,
+.carousel .btn:hover,
+.message-btn:hover,
+.collection .btn:hover {
     background-color: #7a4e29;
     border-color: #7a4e29;
+    font-size: 10px;
+    letter-spacing: 0.2em;
+    font-weight: 500;
 }
 
 #contact-us,
@@ -133,16 +140,21 @@ footer p,
 #shop h1,
 .shop-title,
 .shop-text,
+.about-us h3,
 .open-days h2,
 .open-days p,
-.contact span {
+.contact span,
+.services h3,
+.collection h3 {
     font-weight: 500;
     font-size: 20px;
     letter-spacing: 0.2em;
     color: #5c5c5c;
 }
 
-.open-days h2 {
+.open-days h2,
+.about-us p,
+.services p {
     font-size: 15px;
     color: #191919;
 }
@@ -173,11 +185,11 @@ footer p,
 }
 
 .about-us {
-    height: 500px;
+    height: fit-content;
 }
 
 .about-img {
-    height: 100%;
+    height: 500px;
     object-fit: cover;
 }
 
@@ -187,17 +199,57 @@ footer p,
     background-size: cover;
 }
 
-.about-img-div {
-    background-image: url('./img/Wcollect.webp');
+.collection-div {
+    background-image: url('./img/collect1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position-y: -400px;
+    /* background-position-y: -400px; */
 }
 
-/* .about-img2 {
-    height: 100%;
-    object-fit: cover;
-} */
+#first-slide button,
+#second-slide button {
+    display: none;
+}
+
+.carousel h3 {
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    font-size: 15px;
+    font-weight: 500;
+}
+
+.carousel .btn {
+    border: none;
+    font-size: 14px;
+}
+
+.service-icon {
+    width: 35px;
+    height: 35px;
+}
+
+.collection {
+    background-color: #d4bc64;
+    height: 500px;
+}
+
+.collection .btn {
+    background-color: #191919;
+    border-color: #191919;
+}
+
+@media only screen and (max-width: 768px) {
+    .collection-div {
+        display: none;
+    }
+    .collection {
+        background: url('./img/Wcollect.webp'), #d4bc64;
+        height: 500px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position-y: -400px;
+    }
+}
 
 @media only screen and (max-width: 576px) {
     .header-wrapper,
@@ -206,7 +258,15 @@ footer p,
         padding-right: 10px;
     }
 
-    /* #contact-us {
-        margin-top: 150px;
-    } */
+    .about-img {
+        height: 250px;
+    }
+
+    .about-us p {
+        font-size: 14px;
+    }
+
+    .collection {
+        background-position-y: -100px;
+    }
 }
