--- a/src/App.css
+++ b/src/App.css
@@ -2,561 +2,11 @@ html,
 body {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+body {
     font-family: 'Montserrat', sans-serif;
     color: #0c0b0b;
     overflow-x: hidden;
-    box-sizing: border-box;
-}
-main {
-    margin-top: 221px;
-}
-
-@media (max-width: 992px) {
-    main {
-        margin-top: 151px;
-    }
-}
-
-@media (max-width: 568px) {
-    main {
-        margin-top: 121px;
-    }
-}
-
-.logo2 {
-    width: 150px;
-}
-
-@media screen and (max-width: 400px) {
-    .logo2 {
-        width: 120px;
-    }
-
-    main {
-        margin-top: 100px;
-    }
-}
-
-@media screen and (max-width: 350px) {
-    .logo2 {
-        width: 100%;
-    }
-
-    main {
-        margin-top: 75px;
-    }
-}
-
-button {
-    transition: 1100ms;
-}
-.banner {
-    background-color: #d4bc64;
-}
-
-.banner p {
-    font-size: 12px;
-}
-
-.header-wrapper {
-    padding: 18px 30px;
-}
-
-.icon {
-    position: relative;
-    width: 20px;
-    height: 20px;
-}
-
-#nav1 a,
-#nav2 a {
-    color: #191919;
-    font-size: 12px;
-    font-weight: 500;
-    letter-spacing: 0.2em;
-}
-
-#nav1 a {
-    border-bottom: 1px solid #dbdbda;
-}
-
-#sidebar-menu a {
-    font-size: 11px;
-    font-weight: normal;
-    color: rgb(0, 0, 0, 0.5);
-    border: none;
-}
-
-#sidebar-menu a:hover {
-    color: #000;
-}
-
-header a {
-    position: relative;
-}
-
-header .badge {
-    padding: 0.3em 0.5em;
-    border-radius: 50%;
-    position: absolute;
-    font-size: 11px;
-    left: 70%;
-    bottom: 0%;
-    border: 3px solid #fff;
-}
-
-.currency {
-    border: none;
-    font-size: 12px;
-    color: #000;
-    letter-spacing: 0.2em;
-    width: 100px;
-    font-weight: 500;
-}
-
-footer {
-    padding-left: 30px;
-    padding-right: 30px;
-    border-top: 1px solid #dbdada;
-}
-
-footer .currency {
-    color: #5b5a5a;
-}
-
-#nav2 a:hover {
-    border-bottom: 1px solid #191919;
-}
-
-#social-offcanvas a,
-#footer-socials a {
-    color: #7f7f7f;
-}
-
-#social-offcanvas {
-    border-top: 1px solid #bfbfbf;
-    width: inherit;
-}
-
-#social-offcanvas a svg,
-#footer-socials a svg {
-    width: 12px;
-    height: 12px;
-}
-
-footer h3 {
-    color: #5c5c5c;
-    font-size: 11px;
-    letter-spacing: 0.2em;
-    font-weight: 500;
-}
-
-footer p,
-.subscribe::placeholder,
-.message::placeholder {
-    font-size: 11px;
-    color: #5b5a5a;
-}
-
-.copyright {
-    color: #5c5c5c;
-    letter-spacing: 0.2em;
-    font-weight: 500;
-    font-size: 10px;
-}
-
-.subscribe-btn:hover,
-.carousel .btn,
-#cart-menu .cart-btn,
-.message-btn,
-.collection .btn,
-#shop .card .btn,
-#cart-menu .cart__btn-empty:hover,
-#cart-menu .cart__btn-checkout {
-    background-color: #d4bc64;
-    border-color: #d4bc64;
-    font-size: 10px;
-    letter-spacing: 0.2em;
-    font-weight: 500;
-}
-
-#cart-menu table {
-    table-layout: fixed;
-}
-
-#cart-menu td {
-    width: 33%;
-    padding: 2em 0;
-}
-
-.subscribe-btn,
-.carousel .btn:hover,
-.message-btn:hover,
-.collection .btn:hover,
-#cart-menu .cart__btn-empty,
-#cart-menu .cart__btn-checkout:hover {
-    background-color: #7a4e29;
-    border-color: #7a4e29;
-    font-size: 10px;
-    letter-spacing: 0.2em;
-    font-weight: 500;
-}
-#shop .card .btn,
-#cart-menu .cart__btn-checkout,
-#cart-menu .cart__btn-empty {
-    font-weight: 600;
-    text-transform: uppercase;
-}
-
-#cart-menu .cart__btn-checkout {
-    padding: 1.5em 3em;
-    border-radius: 0;
-}
-
-#cart-menu .cart__btn-empty {
-    padding: 1.5em 3em;
-    border: none;
-}
-
-#cart-menu .cart-item1 {
-    padding: 2em 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-#cart-menu .cart-item__image1 {
-    width: 45%;
-    object-fit: cover;
-}
-
-#cart-menu .cart-item__details1 {
-    width: 50%;
-}
-
-#cart-menu .cart-item__details-name1 {
-    font-size: 0.95rem;
-    margin-bottom: 0.25rem;
-    font-weight: 500;
-    text-transform: uppercase;
-    color: #5c5c5c;
-}
-#cart-menu .item-group1 {
-    display: flex;
-    margin-top: 1em;
-}
-#cart-menu .cart-item__details-qty1 {
-    display: flex;
-    margin-bottom: 0;
-    border: 1px solid #dbdada;
-    align-items: center;
-    white-space: nowrap;
-    font-size: 1rem;
-}
-
-#cart-menu .cart-item__details-qty1 button {
-    border: none;
-    background: none;
-    font-size: 1.25rem;
-}
-
-#cart-menu .cart-item__details-qty1 p {
-    margin-bottom: 0;
-    margin-top: 3px;
-    transition: 100ms;
-}
-
-#cart-menu .cart-item__details-price1 {
-    font-size: 0.7rem;
-    color: #191919;
-}
-
-#cart-menu .cart-item__remove1 {
-    text-decoration: underline;
-    font-size: 0.56rem;
-    text-transform: uppercase;
-    border: none;
-    background-color: #fff;
-    margin-left: auto;
-    color: #191919;
-}
-
-#contact-us,
-#shop {
-    padding: 25px;
-    /* margin-top: 250px; */
-}
-
-/* #shop .card {
-    transition: 1000s;
-} */
-
-#contact-us h1,
-#shop h1,
-.shop-title,
-.shop-text,
-.about-us h3,
-.open-days h2,
-.open-days p,
-.contact span,
-.services h3,
-.collection h3,
-#cart-menu h1,
-#checkout h4 {
-    font-weight: 500;
-    font-size: 20px;
-    letter-spacing: 0.2em;
-    color: #5c5c5c;
-}
-
-#cart-menu h1 .logo {
-    color: #d4bc64;
-    font-size: 30px;
-}
-
-#checkout .gold-badge {
-    /* padding: 0.75em 1.05em; */
-    border-radius: 50%;
-    position: absolute;
-    font-size: 12px;
-    background-color: #d4bc64;
-    left: 62%;
-    top: -8%;
-}
-
-@media (max-width: 992px) {
-    #checkout .gold-badge {
-        left: 68%;
-        top: -5%;
-    }
-}
-
-#cart-menu .cart__empty h6 {
-    font-weight: 500;
-    font-size: 16px;
-    letter-spacing: 0.2em;
-    color: #5c5c5c;
-}
-
-.open-days h2,
-.about-us p,
-.services p,
-#cart-menu .cart__none,
-#cart-menu th {
-    font-size: 15px;
-    color: #191919;
-}
-
-#cart-menu tbody {
-    border-color: #dbdada;
-}
-
-.open-days p,
-.shop-title,
-.shop-text,
-.contact span {
-    font-size: 11px;
-}
-
-.contact span a {
-    color: #5c5c5c;
-}
-
-.shop-img {
-    object-fit: cover;
-}
-
-.shop-text {
-    /* font-size: 10px; */
-    color: #414141;
-}
-
-.carousel-img {
-    max-height: 70vh;
-    object-fit: cover;
-}
-
-.about-us {
-    height: fit-content;
-}
-
-.about-img {
-    height: 500px;
-    object-fit: cover;
-}
-
-.about-img-div2 {
-    background-image: url('./img/confidence.webp');
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.collection-div {
-    background-image: url('./img/collect1.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    /* background-position-y: -400px; */
-}
-
-#first-slide button,
-#second-slide button {
-    display: none;
-}
-
-.carousel h3 {
-    text-transform: uppercase;
-    letter-spacing: 0.2em;
-    font-size: 15px;
-    font-weight: 500;
-}
-
-.carousel .btn {
-    border: none;
-    font-size: 14px;
-}
-
-.service-icon {
-    width: 35px;
-    height: 35px;
-}
-
-.collection {
-    background-color: #d4bc64;
-    height: 500px;
-}
-
-.collection .btn {
-    background-color: #191919;
-    border-color: #191919;
-}
-
-/* Cart Menu */
-
-#cart-menu .offcanvas-title {
-    font-family: Montserrat, sans-serif;
-    font-weight: 500;
-    font-style: normal;
-    color: #5c5c5c;
-    transition: color 0.2s ease-in-out;
-    letter-spacing: 0.2em;
-    text-transform: uppercase;
-}
-
-#cart-menu .offcanvas-header {
-    font-family: Montserrat, sans-serif;
-    font-weight: 500;
-    font-style: normal;
-    color: #5c5c5c;
-    transition: color 0.2s ease-in-out;
-    letter-spacing: 0.2em;
-    text-transform: uppercase;
-    border-bottom: 1px solid #dbdada;
-}
-
-#cart-menu .cart__footer {
-    position: sticky;
-    border-top: 1px solid #dbdada;
-}
-
-#cart-menu .cart-item {
-    padding: 2em 0;
-}
-
-#cart-menu tbody tr {
-    border-color: #fff;
-}
-
-#cart-menu .cart-item__image {
-    width: 45%;
-    object-fit: cover;
-}
-
-#cart-menu .cart-item__details {
-    width: 50%;
-}
-
-#cart-menu .cart-item__details-name {
-    font-size: 0.95rem;
-    margin-bottom: 0.25rem;
-    font-weight: 500;
-    text-transform: uppercase;
-    color: #5c5c5c;
-}
-#cart-menu .item-group {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 23%;
-}
-
-#cart-menu .total-price {
-    margin-top: 23%;
-}
-#cart-menu .cart-item__details-qty {
-    display: flex;
-    margin-bottom: 0;
-    border: 1px solid #dbdada;
-    align-items: center;
-    white-space: nowrap;
-    font-size: 1rem;
-}
-
-#cart-menu .cart-item__details-qty button {
-    border: none;
-    background: none;
-    font-size: 1.25rem;
-}
-
-#cart-menu .cart-item__details-qty p {
-    margin-bottom: 0;
-    margin-top: 3px;
-    transition: 100ms;
-}
-
-#cart-menu .cart-item__details-price {
-    font-size: 0.7rem;
-    color: #191919;
-}
-
-#cart-menu .cart-item__remove {
-    text-decoration: underline;
-    font-size: 0.56rem;
-    text-transform: uppercase;
-    border: none;
-    background-color: #fff;
-    color: #191919;
-}
-
-@media only screen and (max-width: 768px) {
-    .collection-div {
-        display: none;
-    }
-    .collection {
-        background: url('./img/Wcollect.webp'), #d4bc64;
-        height: 500px;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position-y: -400px;
-    }
-}
-
-@media only screen and (max-width: 576px) {
-    .header-wrapper,
-    footer {
-        padding-left: 10px;
-        padding-right: 10px;
-    }
-
-    .about-img {
-        height: 250px;
-    }
-
-    .about-us p {
-        font-size: 14px;
-    }
-
-    .collection {
-        background-position-y: -100px;
-    }
 }
