--- a/src/components/hazellifestyle/footer.css
+++ b/src/components/hazellifestyle/footer.css
@@ -1,3 +1,7 @@
+footer {
+    font-family: Montserrat;
+}
+
 footer .footer-logo {
     width: 70%;
 }
@@ -12,6 +16,7 @@ footer .footer-logo {
         width: 50%;
     }
 }
+
 footer {
     border-bottom: 16px solid #d5b066;
     text-transform: capitalize;
