--- a/src/components/hazelbabies/hero.css
+++ b/src/components/hazelbabies/hero.css
@@ -1,5 +1,5 @@
 #babies-hero {
-    background-image: url(../../img/babies-img/hero.png);
+    background: url(../../img/babies-img/hero.png);
     background-repeat: no-repeat;
     background-position: left;
     background-size: cover;
@@ -22,10 +22,26 @@
     text-shadow: 0rem 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
 }
 
+#babies-hero h1 .text-pink {
+    color: #fed0d1;
+    text-shadow: 0rem 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
+}
+
 @media (max-width: 47.9375rem) {
-    #babies-hero h1 {
-        color: #d5b066;
-        text-shadow: 0rem 0.25rem 0.25rem hwb(0 100% 0% / 0.25);
+    #babies-hero h1 .text-pink {
+        color: #6fc9f3;
+        text-shadow: 0rem 0.25rem 0.25rem rgba(255, 255, 255, 0.25);
+    }
+
+    #babies-hero {
+        /* background: #000, url(../../img/babies-img/hero.png); */
+        background: linear-gradient(
+                0deg,
+                rgba(0, 0, 0, 0.08),
+                rgba(0, 0, 0, 0.08)
+            ),
+            url(../../img/babies-img/hero.png);
+        background-size: contain;
     }
 }
 
