--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ button:active,
     box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
 
-main {
+/* main {
     margin-top: 167.7px;
 }
 
@@ -69,7 +69,7 @@ main {
     main {
         margin-top: 121px;
     }
-}
+} */
 
 /* @media (max-width: 320px) {
     main {
